# trustpipe

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  test.yml  trust-gate.yml
docs/: architecture.md  eu-ai-act-guide.md  plugin-development.md  quickstart.md  trust-score.md
examples/: airflow_dag.py  compliance_report.py  dbt_import.py  pandas_quickstart.py  spark_job.py
src/trustpipe/: __init__.py
src/trustpipe/alerts/: webhook.py
src/trustpipe/api/: server.py
src/trustpipe/cli/: formatters.py  main.py
src/trustpipe/compliance/: eu_ai_act.py  reporter.py  schemas.py
src/trustpipe/compliance/templates/: article10.md.j2  audit_log.md.j2  datacard.md.j2
src/trustpipe/core/: config.py  engine.py  exceptions.py  federation.py
src/trustpipe/dashboard/: app.py
src/trustpipe/llm/: analyzer.py  narrator.py  providers.py
src/trustpipe/plugins/: airflow_plugin.py  base.py  dbt_plugin.py  kafka_plugin.py  pandas_plugin.py  spark_plugin.py
src/trustpipe/provenance/: chain.py  lineage.py  merkle.py  record.py
src/trustpipe/storage/: base.py  postgres.py  s3.py  sqlite.py
src/trustpipe/storage/migrations/: v001_initial.py
src/trustpipe/trust/: dimensions.py  drift.py  poisoning.py  scorer.py  weights.py
tests/: conftest.py
tests/e2e/: test_3_line_promise.py  test_real_datasets.py
tests/integration/: test_pandas_plugin.py
tests/unit/: test_airflow_plugin.py  test_alerts.py  test_api.py  test_compliance.py  test_config.py  test_dbt_plugin.py  test_dimensions.py  test_federation.py  test_gate.py  test_kafka_plugin.py  test_merkle.py  test_postgres_backend.py  test_provenance_chain.py  test_s3_backend.py  test_sqlite_backend.py  test_trust_scorer.py
