[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trustpipe"
version = "0.1.0"
description = "AI Data Supply Chain Trust & Provenance Platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Pallavi Chandrashekar" },
]
keywords = [
    "data-provenance", "data-trust", "data-lineage", "eu-ai-act",
    "data-quality", "mlops", "data-engineering", "compliance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
trust = [
    "pandas>=2.0",
    "numpy>=1.24",
]
drift = [
    "trustpipe[trust]",
    "evidently>=0.4",
]
poisoning = [
    "trustpipe[trust]",
    "pyod>=1.0",
    "scikit-learn>=1.3",
]
merkle = [
    "pymerkletools>=1.0",
]
pandas = [
    "trustpipe[trust]",
]
spark = [
    "trustpipe[trust]",
    "pyspark>=3.4",
]
airflow = [
    "apache-airflow>=2.7",
]
postgres = [
    "psycopg[binary]>=3.0",
]
llm = [
    "anthropic>=0.30",
    "openai>=1.0",
]
dashboard = [
    "trustpipe[trust]",
    "dash>=2.14",
    "plotly>=5.0",
]
api = [
    "trustpipe[trust]",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
dbt = [
    "dbt-core>=1.6",
]
all = [
    "trustpipe[trust,drift,poisoning,merkle,llm,dashboard,api]",
]
dev = [
    "trustpipe[all]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/pallavi-chandrashekar/trustpipe"
Repository = "https://github.com/pallavi-chandrashekar/trustpipe"
Issues = "https://github.com/pallavi-chandrashekar/trustpipe/issues"

[project.scripts]
trustpipe = "trustpipe.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/trustpipe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require external services",
    "spark: marks tests that require PySpark",
    "airflow: marks tests that require Airflow",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["trustpipe"]
